# TIPE_compression

./: .gitignore  README.md
code/: dune-project
code/lib/: bit_wise_channel.ml  bit_wise_channel.mli  dune
code/lib/bit_wise_channel/: bit_wise_channel.ml  dune
code/lib/code_table/: code_table.ml  code_table.mli  dune
code/lib/huffman/: dune  huffman.ml  huffman.mli
code/lib/huffman/arbres/: arbres.ml  arbres.mli  dune
code/lib/huffman/tas_binaire/: dune  tas_binaire.ml  tas_binaire.mli
code/test/: dune  test_TIPE_compression.ml
code/test/arbres_test/: arbres_test.ml  dune
code/test/bit_wise_channel_test/: bit_wise_channel_test.ml  dune
code/test/code_table_test/: code_table_test.ml  dune
code/test/encodage_decodage_test/: dune  encodage_decodage_test.ml
code/test/heap_test/: dune  heap_test.ml
code/test/huffman_test/: dune  huffman_test.ml
code/test/stats_test/: dune  stats_test.ml
